fix: make social link anchors flex to eliminate line-height misalignment

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1086,6 +1086,11 @@ figure {
   list-style: none;
 }
 
+.social-links a {
+  display: flex;
+  align-items: center;
+}
+
 .social-links svg {
   width: 24px;
   height: 24px;
